# dmg-cracker

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile  pyproject.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: testing-and-linting.yml
scripts/: dmg_inspection.py
src/: cli.rs  dmg.rs  hdiutil.rs  lib.rs  main.rs  passwords.rs
tests/: dmg.rs
