[package]
name = "dmg-cracker"
version = "0.1.7"
edition = "2021"
authors = ["James Davis <jamesecd@gmail.com"]
rust-version = "1.72.1"
description = "Tool for performing dictionary attacks on encrypted DMG images on OSX"
readme = "README.md"
homepage = "https://github.com/james-ecd/dmg-cracker"
respository = "https://github.com/james-ecd/dmg-cracker"
license-file = "LICENSE"
keywords = ["encrpyted", "dmg", "dictionary", "attack", "cracker"]
categories = ["command-line-utilities"]
exclude = ["/test_resources"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
console = "0.15.7"
indicatif = {version = "0.17.7", features = ["rayon"]}
num_cpus = "1.16.0"
random-string = "1.0.1"
rayon = "1.9.0"

[dev-dependencies]
mockall = "0.11.4"
regex = "1.10.2"
tempfile = "3.8.1"

[lib]
name = "dmg_cracker"
path = "src/lib.rs"

[[bin]]
name = "dmg-cracker"
path = "src/main.rs"
