[package]
name = "dmg-cracker"
version = "0.1.7"
edition = "2021"
authors = ["James Davis <jamesecd@gmail.com"]
rust-version = "1.72.1"
description = "Tool for performing dictionary attacks on encrypted DMG images on OSX"
readme = "README.md"
homepage = "https://github.com/james-ecd/dmg-cracker"
repository = "https://github.com/james-ecd/dmg-cracker"
license-file = "LICENSE"
keywords = ["encrpyted", "dmg", "dictionary", "attack", "cracker"]
categories = ["command-line-utilities"]
exclude = ["/test_resources"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
csv = "1.3.0"
indicatif = {version = "0.18.0", features = ["rayon"]}
num_cpus = "1.17.0"
random-string = "1.1.0"
rayon = "1.10.0"

[dev-dependencies]
regex = "1.11.1"
tempfile = "3.20.0"

[lib]
name = "dmg_cracker"
path = "src/lib.rs"

[[bin]]
name = "dmg-cracker"
path = "src/main.rs"
